# wave-server

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
shaders/: matvec.wgsl
src/: api_types.rs  checkpoint.rs  gpu.rs  gpu_forward.rs  handlers.rs  help.rs  inference.rs  main.rs  model.rs  server.rs
src/common/: agc.rs  bpe.rs  checkpoint.rs  data.rs  mod.rs  model.rs  rng.rs
src/gpu_tier/: gpu.rs  mod.rs
src/server_tier/: mod.rs  prompt.rs
