[package]
name = "wave-server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "OpenAI-compatible API server for wave-engine models with wave memory support"
repository = "https://github.com/atech-hub/wave-server"
authors = ["Marco Da Cunha"]
keywords = ["machine-learning", "inference", "openai-api", "wave-coherence", "server"]
categories = ["web-programming::http-server", "science"]

[features]
default = []
gpu = ["wgpu", "bytemuck", "pollster"]

[dependencies]
kerr-memory = { path = "../kerr-memory" }
wgpu = { version = "24", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
